# Cmake-Tutorial

./: README.md  auto_clean.sh  auto_compile_run.sh
Demo1/: CMakeLists.txt  main.c
Demo2/: CMakeLists.txt  add.c  main.c
Demo3/: CMakeLists.txt
Demo4/: CMakeLists.txt
Demo5/: CMakeLists.txt
Demo6/: CMakeLists.txt
Demo7/: CMakeLists.txt
Demo8/: CMakeLists.txt  main.c
Demo8/add/: CMakeLists.txt  add.c
Demo8/sub/: CMakeLists.txt  sub.h
Demo_install/: CMakeLists.txt
Demo_install/add/: CMakeLists.txt
Demo_install/sub/: CMakeLists.txt
Demo_pack/: CMakeLists.txt  License.txt
Demo_pack/add/: CMakeLists.txt  add.h
Demo_pack/sub/: sub.c
